# adjunct-oss

./: .env.example  .gitignore  LICENSE  README.md  announcement_scheduler.py  announcements.json  announcements.py  canvas_service.py  config.py  course_utils.py  courses.json  discussion_action.py  discussion_grader.py  discussion_parser.py  discussion_rubric.py  discussions.py  env_validator.py  llm_manager.py  logger.py  main.py  pyproject.toml  pytest.ini  requirements.txt  response_generator.py  rubric_grader.py  rubric_models.py  rubric_policy.py  schemas.py  speed_grader.py  submission_evaluator.py  submission_models.py  utils.py
chcp/: __init__.py  __main__.py  discussion_rubric.py  paths.py  rubric_grader.py  rubric_models.py  rubric_policy.py  settings.py  submission_evaluator.py  submission_models.py
chcp/actions/: __init__.py  announcements.py  discussion_plagiarism.py  discussions.py  speed_grader.py
chcp/canvas/: __init__.py  (+2 more)
config/: announcements.json  courses.json
grading/: __init__.py  analysis.py  brief.py  citations.py  evaluate.py  fixtures.py  parse.py  scoring.py
rubric/: __init__.py  config.py  criteria_detail.py  defaults.py  enforcement.py  leniency.py  pipeline.py  prompt.py  types.py
tests/: __init__.py  test_canvas_service.py  test_course_utils.py  test_discussion_rubric.py  test_env_validator.py  test_grading_analysis.py  test_llm_manager.py  test_pause_control.py  test_plagiarism_checker.py  test_rubric_grader.py  test_rubric_models.py  test_rubric_policy.py  test_schemas.py  test_speed_grader.py  test_submission_evaluator.py
(+22 files in other folders)
